tests/fixtures/tests/CompileError/NoTests.elm
module CompileError.NoTests exposing (somethingElse)

import Expect
import Test exposing (..)


somethingElse : Int
somethingElse =
    6
